HMAN-98 Fix build tests